@@ -67,6 +67,7 @@
     Hogan.
   * Fixed RDoc::Markup::Parser for CRLF line endings.  Issue #67 by Marvin
     Gülker.
+  * Fixed lexing of percent strings like %r{#}.  Issue #68 by eclectic923.
 
 === 3.9.2 / 2011-08-11
 
